opt:stream+json/x-ndjson支持